--- a/index.html
+++ b/index.html
@@ -120,8 +120,6 @@
                  </p>
                 <p>
 
-                </p>
-                 <p>
             
                     </p>
                     <p style="font-size:25px ; color:goldenrod ;" > 
@@ -241,7 +239,7 @@
             <div class="col-md-12 text-center">
                 <h3>A picture is worth a thousand words!</h3>
                 <p>Help us capture the moment, tag your photos with the hashtag
-                    <a href="https://instagram.com/explore/tags/shivamehandikishaadi/" target="_blank">#ShivamMehandiKiShaadi</a>
+                    <a href="https://instagram.com/explore/tags/shivamkimehandi/" target="_blank">#ShivamKiMehandi</a>
                 </p>
             </div>
         </div>
